centered h2, put a border around pantry items and freezer items and made them bigger. tried to align the 3 items together, but image size is creating issues. May need flex for that?

--- a/index.css
+++ b/index.css
@@ -1,7 +1,22 @@
 .food_list {
     background-color: lightgrey;
 }
+.food_list h3 {
+    font-size: 30px;
+}
+.food_list ul {
+    font-size: 16px;
+}
 .lists_and_image article,
 .lists_and_image img {
     display: inline-block;
+}
+h1 {
+    text-align: center;
+    color: teal;
+}
+h2 {
+    font-size: 40px;
+    border: solid;
+    background-color: beige;
 }
